[workspace]
members=["crates/parachute-kernel-boot"]
resolver="3"

[workspace.package]
license = "MPL-2.0"
description = "Modern WASM compatibility layer and oS"

[workspace.dependencies]
portal-pc-waffle = "^0.5"
pit-core = "^0.4.2"
pit-patch = "^0.4.2"
awaiter-trait = "^0.2.7"
bysyncify = "^0.2.2"

spin = "0.10.0"

# Boot
limine = "0.5.0"
uefi = "0.36.1"

# Arch
x86_64 = "0.15.4"
aarch64 = "0.0.14"
riscv = "0.16.0"