[workspace]
members = ["crates/parachute-kernel-boot"]
resolver = "3"

[workspace.package]
license = "MPL-2.0"
description = "Modern WASM compatibility layer and oS"

[workspace.dependencies]
portal-pc-waffle = { version = "^0.6.0-alpha.1", git = "https://github.com/portal-co/waffle-.git" }
pit-core = { version = "^0.4.8", git = "https://github.com/portal-co/pit-core.git" }
pit-patch = { version = "^0.4.2", git = "https://github.com/portal-co/pit.git" }
awaiter-trait = { version = "^0.2.7", git = "https://github.com/portal-co/awaiter-trait.git" }
bysyncify = { version = "^0.2.2", git = "https://github.com/portal-co/bysyncify.git" }

spin = "0.10.0"

# Boot
limine = "0.5.0"
uefi = "0.36.1"

# Arch
x86_64 = "0.15.4"
aarch64 = "0.0.14"
riscv = "0.16.0"

# Drivers
virtio-drivers = "0.13.0"

# Testing
bootloader = "0.9.8"